option(
	'static',
	type: 'combo',
	choices: [ 'none', 'system', 'prebuilt' ],
	value: 'none',
	description: 'Build statically using libraries present on the system (\'system\') or using prebuilt libraries official builds use (\'prebuilt\')'
)
option(
	'beta',
	type: 'boolean',
	value: false,
	description: 'Beta build'
)
option(
	'ignore_updates',
	type: 'boolean',
	value: true,
	description: 'Don\'t show notifications about available updates'
)
option(
	'install_check',
	type: 'boolean',
	value: false,
	description: 'Do install check on startup'
)
option(
	'http',
	type: 'boolean',
	value: true,
	description: 'Enable HTTP via libcurl'
)
option(
	'gravfft',
	type: 'boolean',
	value: true,
	description: 'Enable FFT gravity via libfftw3'
)
option(
	'snapshot',
	type: 'boolean',
	value: false,
	description: 'Snapshot build'
)
option(
	'snapshot_id',
	type: 'integer',
	min: 0,
	value: 199,
	description: 'Snapshot ID, only relevant if \'snapshot\' is true'
)
option(
	'mod_id',
	type: 'integer',
	min: 0,
	value: 0,
	description: 'Mod ID, used on the https://starcatcher.us/TPT build server, the build server will compile for all platforms for you and send updates in-game, see jacob1 to get a mod ID'
)
option(
	'lua',
	type: 'combo',
	choices: [ 'none', 'lua5.1', 'lua5.2', 'luajit' ],
	value: 'luajit',
	description: 'Lua library to use'
)
option(
	'ssl',
	type: 'combo',
	choices: [ 'openssl' ],
	value: 'openssl',
	description: 'SSL library to use'
)
option(
	'x86_sse',
	type: 'combo',
	choices: [ 'none', 'sse', 'sse2', 'sse3', 'auto' ],
	value: 'auto',
	description: 'Enable SSE (available only on x86)'
)
option(
	'native',
	type: 'boolean',
	value: false,
	description: 'Build with optimizations specific to the local machine, may not run on other machines, overrides \'x86_sse\''
)
option(
	'ogli',
	type: 'boolean',
	value: false,
	description: 'Enable OpenGL interface rendering (currently defunct)'
)
option(
	'oglr',
	type: 'boolean',
	value: false,
	description: 'Enable OpenGL particle rendering (currently defunct)'
)
option(
	'build_powder',
	type: 'boolean',
	value: true,
	description: 'Build the game'
)
option(
	'build_render',
	type: 'boolean',
	value: false,
	description: 'Build the thumbnail renderer'
)
option(
	'build_font',
	type: 'boolean',
	value: false,
	description: 'Build the font editor'
)
option(
	'server',
	type: 'string',
	value: 'powdertoy.co.uk',
	description: 'Simulation server'
)
option(
	'static_server',
	type: 'string',
	value: 'static.powdertoy.co.uk',
	description: 'Static simulation server'
)
option(
	'update_server',
	type: 'string',
	value: '',
	description: 'Update server, only used by snapshots and mods, see \'snapshot_id\' and \'mod_id\''
)
option(
	'workaround_gcc_no_pie',
	type: 'boolean',
	value: true,
	description: 'Pass -no-pie to gcc manually to work around meson\'s -Db_pie=false doing nothing'
)
